--- a/docker/docker-compose-db.yaml
+++ b/docker/docker-compose-db.yaml
@@ -6,7 +6,7 @@ services:
     image: redis:7.2.3-alpine
     volumes:
       - ./db-data/redis-data:/data
-      
+
   postgres-data:
     image: postgis/postgis:16-3.4
     container_name: postgres-data
@@ -17,6 +17,8 @@ services:
       POSTGRES_PASSWORD: ${DB_DASHBOARD_PASSWORD}
     volumes:
       - ./db-data/postgres-data:/var/lib/postgresql/data
+    ports: # add here
+      - "5433:5432"
 
   postgres-manager:
     image: postgis/postgis:16-3.4
